--- a/gemini_chat.html
+++ b/gemini_chat.html
@@ -1,143 +1,143 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gemini Chatbot by Neel</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-    <style>
-        body {
-            font-family: 'Inter', sans-serif;
-            background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
-            color: #fff;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: flex-start;
-            height: 100vh;
-        }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Gemini Chatbot by Neel</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet"/>
+  <style>
+    body {
+      font-family: 'Inter', sans-serif;
+      background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
+      color: #fff;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: flex-start;
+      height: 100vh;
+    }
 
-        header {
-            text-align: center;
-            margin: 30px 0 10px 0;
-        }
+    header {
+      text-align: center;
+      margin: 30px 0 10px 0;
+    }
 
-        header h1 {
-            font-size: 2.5em;
-            font-weight: 700;
-            margin: 0;
-        }
+    header h1 {
+      font-size: 2.5em;
+      font-weight: 700;
+      margin: 0;
+    }
 
-        .chat-container {
-            background: #ffffff0d;
-            border: 1px solid #ffffff22;
-            border-radius: 16px;
-            width: 90%;
-            max-width: 800px;
-            padding: 30px;
-            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.25);
-            display: flex;
-            flex-direction: column;
-            height: 70vh;
-            overflow-y: auto;
-        }
+    .chat-container {
+      background: #ffffff0d;
+      border: 1px solid #ffffff22;
+      border-radius: 16px;
+      width: 90%;
+      max-width: 800px;
+      padding: 30px;
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.25);
+      display: flex;
+      flex-direction: column;
+      height: 70vh;
+      overflow-y: auto;
+    }
 
-        .message {
-            padding: 10px 16px;
-            margin: 10px 0;
-            border-radius: 12px;
-            max-width: 75%;
-            word-wrap: break-word;
-        }
+    .message {
+      padding: 10px 16px;
+      margin: 10px 0;
+      border-radius: 12px;
+      max-width: 75%;
+      word-wrap: break-word;
+    }
 
-        .user {
-            background-color: #4caf50;
-            align-self: flex-end;
-        }
+    .user {
+      background-color: #4caf50;
+      align-self: flex-end;
+    }
 
-        .bot {
-            background-color: #1e88e5;
-            align-self: flex-start;
-        }
+    .bot {
+      background-color: #1e88e5;
+      align-self: flex-start;
+    }
 
-        .input-container {
-            width: 90%;
-            max-width: 800px;
-            display: flex;
-            margin: 20px 0;
-        }
+    .input-container {
+      width: 90%;
+      max-width: 800px;
+      display: flex;
+      margin: 20px 0;
+    }
 
-        input {
-            flex: 1;
-            padding: 12px 18px;
-            border: none;
-            border-radius: 10px 0 0 10px;
-            font-size: 16px;
-        }
+    input {
+      flex: 1;
+      padding: 12px 18px;
+      border: none;
+      border-radius: 10px 0 0 10px;
+      font-size: 16px;
+    }
 
-        button {
-            padding: 12px 20px;
-            border: none;
-            background-color: #ff9800;
-            color: white;
-            font-weight: bold;
-            font-size: 16px;
-            cursor: pointer;
-            border-radius: 0 10px 10px 0;
-        }
+    button {
+      padding: 12px 20px;
+      border: none;
+      background-color: #ff9800;
+      color: white;
+      font-weight: bold;
+      font-size: 16px;
+      cursor: pointer;
+      border-radius: 0 10px 10px 0;
+    }
 
-        button:hover {
-            background-color: #fb8c00;
-        }
-    </style>
+    button:hover {
+      background-color: #fb8c00;
+    }
+  </style>
 </head>
 <body>
-    <header>
-        <h1>Gemini Chatbot by Neel</h1>
-    </header>
+  <header>
+    <h1>Gemini Chatbot by Neel</h1>
+  </header>
 
-    <div class="chat-container" id="chat"></div>
+  <div class="chat-container" id="chat"></div>
 
-    <div class="input-container">
-        <input type="text" id="userInput" placeholder="Type your message here..." onkeydown="if(event.key==='Enter'){sendMessage()}" />
-        <button onclick="sendMessage()">Send</button>
-    </div>
+  <div class="input-container">
+    <input type="text" id="userInput" placeholder="Type your message..." onkeydown="if(event.key==='Enter'){sendMessage()}" />
+    <button onclick="sendMessage()">Send</button>
+  </div>
 
-    <script>
-        async function sendMessage() {
-            const input = document.getElementById("userInput");
-            const text = input.value.trim();
-            if (!text) return;
+  <script>
+    async function sendMessage() {
+      const input = document.getElementById("userInput");
+      const text = input.value.trim();
+      if (!text) return;
 
-            appendMessage("You", text, "user");
-            input.value = "";
-            appendMessage("Gemini", "Thinking...", "bot");
+      appendMessage("You", text, "user");
+      input.value = "";
+      appendMessage("Gemini", "Thinking...", "bot");
 
-            try {
-                const res = await fetch('/chat', {
-                    method: 'POST',
-                    headers: {'Content-Type': 'application/json'},
-                    body: JSON.stringify({ prompt: text })
-                });
-                const data = await res.json();
-                const botMessages = document.querySelectorAll(".bot");
-                botMessages[botMessages.length - 1].textContent = data.response;
-            } catch (err) {
-                const botMessages = document.querySelectorAll(".bot");
-                botMessages[botMessages.length - 1].textContent = "Error getting response.";
-            }
-        }
+      try {
+        const res = await fetch('/chat', {
+          method: 'POST',
+          headers: {'Content-Type': 'application/json'},
+          body: JSON.stringify({ prompt: text })
+        });
+        const data = await res.json();
+        const botMessages = document.querySelectorAll(".bot");
+        botMessages[botMessages.length - 1].textContent = data.response;
+      } catch (err) {
+        const botMessages = document.querySelectorAll(".bot");
+        botMessages[botMessages.length - 1].textContent = "Error getting response.";
+      }
+    }
 
-        function appendMessage(sender, text, type) {
-            const chat = document.getElementById("chat");
-            const msg = document.createElement("div");
-            msg.className = `message ${type}`;
-            msg.textContent = text;
-            chat.appendChild(msg);
-            chat.scrollTop = chat.scrollHeight;
-        }
-    </script>
+    function appendMessage(sender, text, type) {
+      const chat = document.getElementById("chat");
+      const msg = document.createElement("div");
+      msg.className = `message ${type}`;
+      msg.textContent = text;
+      chat.appendChild(msg);
+      chat.scrollTop = chat.scrollHeight;
+    }
+  </script>
 </body>
 </html>
